# diffusers

./: .deepsource.toml  .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml  requirements.txt
.github/workflows/: check.yml  test.yml
docs/: book.toml
docs/src/: SUMMARY.md  importing_models.md
examples/: stable-diffusion-interactive.rs  stable-diffusion-memory-efficient.rs  stable-diffusion.rs
scripts/: _export.py  _loader.py  _utils.py  hf2pyke.py  optimize.py  reserialize_clip_tokenizer.rs  sd2pyke.py
scripts/_optimizer/: __init__.py  fusion_attention_unet.py  onnx_model.py  optimizer.py  shape_infer_helper.py
src/: clip.rs  config.rs  lib.rs
src/pipelines/: mod.rs  safe_stable_diffusion.rs
src/pipelines/stable_diffusion/: callback-approximate-image.md  callback-decode-image.md  callback-latents.md  callback-progress.md  impl_img2img.rs  impl_main.rs  impl_memory_optimized.rs  impl_onnx.rs  impl_onnx_memory_efficient.rs  impl_txt2img.rs  lpw.rs  mod.rs  text_embeddings.rs
src/pipelines/stable_diffusion/_doc/: callback-approximate-image.md  callback-decode-image.md  callback-latents.md
src/schedulers/: ddim.rs  ddpm.rs  dpm_solver.rs  dpm_solver_multistep.rs  euler_ancestral_discrete.rs  euler_discrete.rs  lms_discrete.rs  mod.rs
src/util/: interpolation.rs  mod.rs  prompting.rs
tests/: image_progress.rs  main.rs
tests/stable-diffusion/: diffusers.json  pyke-diffusers.toml  text_encoder.onnx  tokenizer.json  vae_decoder.onnx  vae_encoder.onnx
