[package]
name = "pyke-diffusers"
version = "0.2.0"
rust-version = "1.62"
edition = "2021"
license = "Apache-2.0"
description = "modular Rust library for optimized Stable Diffusion inference 🔮"
repository = "https://github.com/pykeio/diffusers"
include = [
	"src/",
	"examples/",
	"scripts/",
	"clippy.toml",
	"LICENSE",
	"README.md",
	"requirements.txt",
	"rustfmt.toml",
	"!/.env/**"
]

[dependencies]
ndarray = { version = "0.15", features = [ "rayon" ] }
ndarray-rand = "0.14"
rayon = "1.5"
num-traits = "0.2"
anyhow = "1.0"
regex = "1.7"
lazy_static = "1.4"
image = { version = "0.24", default-features = false }
rand = "0.8"
cfg-if = "1.0"
ort = { version = "1.14", default-features = false }
ndarray_einsum_beta = "0.7.0"

GSL = { version = "6.0", optional = true }

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokenizers = { version = "0.13", optional = true, default-features = false, features = [ "onig" ] }

[dev-dependencies]
tokio = { version = "1.0", features = [ "full" ] }
image = { version = "0.24", default-features = false, features = [ "png" ] }
ort = { version = "1.14", default-features = false, features = [ "download-binaries" ] }

requestty = "0.5"
kdam = "0.3"
show-image = { version = "0.13", features = [ "image" ] }

[package.metadata.docs.rs]
features = [ "ort/disable-build-script" ]

[features]
default = [ "ort-download-binaries", "common-schedulers", "ort-copy-dylibs", "stable-diffusion" ]

tokenizers = [ "dep:tokenizers" ]

ort-download-binaries = [ "ort/download-binaries" ]
ort-cuda = [ "ort/cuda" ]
ort-tensorrt = [ "ort/tensorrt" ]
ort-rocm = [ "ort/rocm" ]
ort-onednn = [ "ort/onednn" ]
ort-directml = [ "ort/directml" ]
ort-coreml = [ "ort/coreml" ]
ort-copy-dylibs = [ "ort/copy-dylibs" ]

scheduler-lms = [ "dep:GSL" ]
scheduler-ddim = []
scheduler-ddpm = []
scheduler-karras-ve = []
scheduler-pndm = []
scheduler-plms = [ "scheduler-pndm" ]
scheduler-sde-ve = []
scheduler-sde-vp = []
scheduler-dpm-solver = []
scheduler-euler = []
scheduler-euler-ancestral = []
common-schedulers = [
	"scheduler-ddim",
	"scheduler-ddpm",
	"scheduler-dpm-solver",
	"scheduler-euler",
	"scheduler-euler-ancestral"
]
all-schedulers = [
	"scheduler-lms",
	"scheduler-ddim",
	"scheduler-ddpm",
	"scheduler-karras-ve",
	"scheduler-pndm",
	"scheduler-sde-ve",
	"scheduler-sde-vp",
	"scheduler-dpm-solver",
	"scheduler-euler",
	"scheduler-euler-ancestral"
]

stable-diffusion = [ "tokenizers" ]
safe-stable-diffusion = [ "stable-diffusion", "tokenizers" ]
