[package]
name = "pyke-diffusers"
version = "1.0.0"
edition = "2021"
rust-version = "1.62"
license = "Apache-2.0"
repository = "https://github.com/pykeio/diffusers"
description = "Diffusion model inference for fast text-to-image generation using ort"
categories = [ "computer-vision", "multimedia::images", "science" ]
keywords = [ "diffusers", "diffusion", "stable-diffusion" ]
include = [
	"/src/",
	"/LICENSE",
	"/README.md",
	#"!scripts/",
	#"!/docs/",
	#"!/tests/",
	#"!/.env/**"
]

[dependencies]
ndarray = { version = "0.15", features = [ "rayon" ] }
ndarray-rand = "0.14"
rayon = "1.5"
num-traits = "0.2"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
regex = "1.7"
once_cell = "1.17"
image = { version = "0.24", default-features = false }
rand = "0.8"
cfg-if = "1.0"
ort = { version = "1.14.5", default-features = false }
ndarray_einsum_beta = "0.7"
byteorder = "1"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
toml = "0.7"
tokenizers = { version = "0.13", default-features = false, features = [ "onig" ] }

[dev-dependencies]
tokio = { version = "1.0", features = [ "full" ] }
image = { version = "0.24", default-features = false, features = [ "png" ] }
ort = { version = "1.14.5", default-features = false, features = [ "download-binaries" ] }
tracing-subscriber = "0.3"

requestty = "0.5"
kdam = "0.3"
show-image = { version = "0.13", features = [ "image" ] }

[features]
default = [ "ort-download-binaries", "common-schedulers", "ort-copy-dylibs", "stable-diffusion" ]

ort-load-dynamic = [ "ort/load-dynamic" ]
ort-download-binaries = [ "ort/download-binaries" ]
ort-copy-dylibs = [ "ort/copy-dylibs" ]

ort-cuda = [ "ort/cuda" ]
ort-tensorrt = [ "ort/tensorrt" ]
ort-rocm = [ "ort/rocm" ]
ort-onednn = [ "ort/onednn" ]
ort-directml = [ "ort/directml" ]
ort-coreml = [ "ort/coreml" ]

scheduler-ddim = []
scheduler-ddpm = []
scheduler-dpm-solver = []
scheduler-euler = []
scheduler-euler-ancestral = []
common-schedulers = [
	"scheduler-dpm-solver",
	"scheduler-euler",
	"scheduler-euler-ancestral"
]
all-schedulers = [
	"scheduler-ddim",
	"scheduler-ddpm",
	"scheduler-dpm-solver",
	"scheduler-euler",
	"scheduler-euler-ancestral"
]

stable-diffusion = []
